exports[`test the subscription component matches the snapshot 1`] = `
<div>
  <div
    aria-label="Yoast SEO is inactive"
    className="iGaMkb"
    role="img" />
  <div
    aria-label="Local SEO is inactive"
    className="pfOfD"
    role="img" />
  <div
    aria-label="Video SEO is active"
    className="cQWrFq"
    role="img" />
  <div
    aria-label="News SEO is inactive"
    className="favXdg"
    role="img" />
  <div
    aria-label="WooCommerce SEO is active"
    className="bEJBwK"
    role="img" />
  <div
    aria-label="Local SEO for Woo is inactive"
    className="dRReah"
    role="img" />
</div>
`;

exports[`test the subscription component without active subscriptions using the default matches the snapshot 1`] = `
<div>
  <div
    aria-label="Yoast SEO is inactive"
    className="iGaMkb"
    role="img" />
  <div
    aria-label="Local SEO is inactive"
    className="pfOfD"
    role="img" />
  <div
    aria-label="Video SEO is inactive"
    className="gAaYAR"
    role="img" />
  <div
    aria-label="News SEO is inactive"
    className="favXdg"
    role="img" />
  <div
    aria-label="WooCommerce SEO is inactive"
    className="dUDQWU"
    role="img" />
  <div
    aria-label="Local SEO for Woo is inactive"
    className="dRReah"
    role="img" />
</div>
`;
